[package]
name = "ciris-edge"
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Eric Moore <mooreericnyc@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "Reticulum-native federation transport for the CIRIS stack"
repository = "https://github.com/CIRISAI/CIRISEdge"
readme = "README.md"
publish = false

# Status: v0.20.1 — multimedia tier transport. The LAST feature cut
# before v1.0.0 GA. Adds the four CEWP multimedia-tier transport
# surface pieces per CIRISNodeCore/FSD/MEDIA_SHARING.md on top of the
# v0.20.0 RC1 substrate (CIRISEdge#52):
#
#  1. Contribution subject_kind discriminator — dispatch_inbound
#     sub-routes on `takedown_notice` (fast-path on TVEC / GIFCT-CIP /
#     NCMEC `legal_basis`) and `key_grant` (addressed point-to-point)
#     inside MessageType::ContributionSubmit envelopes. Unknown
#     subject_kinds fall through to the existing handler unchanged.
#  2. FastPathLegalBasis enum (`src/multimedia.rs`) — pins the
#     legal-compliance vocabulary that bumps dispatch priority +
#     emits a synthetic FederationAnnouncement. Matches CIRISRegistry
#     CEG 0.3 §5.6.8.
#  3. BlobBody::External wire shape — `ContentBody` extended with the
#     `kind == "external"` discriminator + `ExternalRefWithAcl`
#     pointer struct. Edge does NOT fetch external bytes; the
#     consumer's client fetches directly from `external_uri`.
#     `validate_content_body` skips AV-13 + SHA gates for external
#     bodies (external scrub is the publisher's responsibility per
#     MEDIA_SHARING.md §2.6).
#  4. L1-as-CDN-edge opt-in — `EdgeConfig::l1_cdn_edge_enabled` +
#     `l1_cdn_edge_external_uri_base`. When enabled AND
#     `agent_mode == Server`, dispatch fires
#     `cdn_edge_prefetch_stub` (full HTTP-fetch implementation
#     deferred post-v1.0; wire shape + dispatch path locked here).
#     Default OFF; Client + Proxy modes ignore the flag.
#
# THREAT_MODEL.md AV-49 documents the multimedia-tier security
# invariants. After v0.20.1 lands, v1.0.0 GA is the ship: a
# version-bump + release notes cut.
#
# v0.20.0 RC1 closes four substrate pieces:
#  1. trust_scoring_capsule cohab wiring — the v0.19.6 deferral
#     paragraph in THREAT_MODEL.md §4.8 (AV-48) is removed. The 7th
#     PyCapsule accessor (`Engine::trust_scoring_capsule`, persist
#     v3.5.1, name tag `ciris_persist::trust_scoring`) is consumed by
#     `extract_trust_scoring` in src/ffi/pyo3.rs; the
#     `init_edge_runtime` cohabitation path now derives the scorer
#     automatically when an `AdmissionGate` is installed and falls back
#     to the bootstrap-permissive `None` posture (matching
#     `trust_threshold = 0.0`) when the typed
#     `ValueError("trust_scoring_unavailable")` fires.
#  2. CEWP L0/L1 tier refinement — `AgentMode` gains
#     `default_disk_budget_bytes` + `default_trust_recursion_depth`
#     (Client 0/0, Proxy 256GB/0, Server 1TB/1). `EdgeConfig` gains
#     `disk_budget_bytes` + `trust_recursion_depth` fields with
#     `init_edge_runtime` optional kwargs for per-deployment override.
#     `dispatch_inbound` now passes `EdgeConfig::trust_recursion_depth`
#     to `TrustScoring::trust_score` (replacing v0.19.6's hardcoded 0).
#  3. MISSION + THREAT_MODEL CEWP-framing refresh — §11 and AV-48
#     reflect the v0.20.0 RC1 closure; §4.9 documents L0/L1 as a
#     security boundary (blast radius bound via recursion depth;
#     capacity-gated admission via disk budget).
#  4. Hardening polish — `cargo audit` / `cargo deny check` clean,
#     doc comments cite v0.19.7 + v0.20.0 lineage (persist v3.6.3,
#     verify v4.4.2, CEWP framing).
#
# v0.20.1 ships multimedia tier (#52); v1.0.0 ships as the
# "Agent 3.0 / CEWP" release.
#
# See FSD/CIRIS_EDGE.md for the architecture, MISSION.md §11 for the
# CEWP L0/L1 tier table, docs/THREAT_MODEL.md for the v0.1.0 P0
# invariants (AV-9 + AV-13 + AV-14 + AV-17 + hybrid-verify-via-persist)
# and AV-48 (v0.20.0 RC1 closure) for the trust short-circuit posture.

[dependencies]
# Substrate. Owns federation_keys directory, canonicalize_envelope,
# steward seeds (OS-keyring), verify_hybrid_via_directory primitive,
# edge_outbound_queue table + Engine surface for send_durable.
# v2.7.0 (CIRISPersist#104/#105/#106/#108/#109) shipped the PyCapsule
# cohabitation accessors — `federation_directory_capsule` /
# `outbound_queue_capsule` / `keyring_signer_capsule` `#[pymethod]`s
# on `PyEngine` — that v0.9.2 edge consumes to construct an `Edge`
# over the host's already-bootstrapped engine WITHOUT relying on
# cross-module PyClass identity (the v0.9.1 cohabitation regression).
# v2.8.0 (CIRISPersist#111) adds `runtime_handle_capsule` — the
# fourth capsule accessor that closes the cross-cdylib **statics**
# regression v0.10.0 hit: persist's `ENGINE_SINGLETON` static is
# duplicated per-`.so`, so the consumer's `current_runtime_handle()`
# always returned `None` in cross-wheel production deployments
# (CIRISConformance v0.10.0 init_handshake failure). The capsule
# sources the runtime from `self.runtime.handle().clone()`,
# sidestepping the static lookup entirely. v0.10.1 edge consumes
# this — see [`extract_capsule`] in `src/ffi/pyo3.rs`.
# Also exposes `list_keys_by_identity_type` on FederationDirectory
# (v2.6.0) — consumed by CIRISEdge#19 AccordCarrier wire-layer
# 2-of-3 verify (accord_holder enumeration) and #20 steward addressing
# (steward enumeration). The Option-B `pub fn` accessors
# (CIRISPersist#95, v2.0.2+) remain for sibling cdylibs that share
# persist's compiled-in PyTypeInfo; edge uses the capsule path
# because we cross extension-module boundaries (separate wheels).
# See ../CIRISPersist/MISSION.md and FSD/EDGE_OUTBOUND_QUEUE.md.
# v3.1.0 (CIRISPersist#117) — adds the 6 peer-mutation methods on
# `FederationDirectory` (`add_peer_record` / `remove_peer_record` /
# `update_peer_{alias,trust,notes,policy}`) plus the typed
# `TrustClass` + `PeerPolicyBlob` types + typed `PeerNotFound` /
# `HardRemoveWithActiveAttestations` errors. Closes the v0.13.0
# `PEER_MUTATION_FOLLOWUP` gap — CIRISEdge v0.15.1 flips the 6 UniFFI
# stubs in `src/ffi/uniffi_impl.rs:221-275` from `NotImplemented` to
# live calls. v3.1.1 also pulls #118 (put_edge_detection_event admission;
# unblocks CIRISEdge#39 emit_verdict at v0.13.1) and #119
# (local_signer_capsule for the ReticulumTransport identity handoff at
# v0.13.1).
# v3.2.0 (CIRISPersist#120) — adds the sibling `BlackholeRules` trait
# (`blackhole_list` / `_upsert` / `_remove` / `_record_hit` /
# `_prune_expired`) + V052 `cirislens.blackhole_rules` table giving
# CIRISEdge's `ReticulumTransport` a durable per-identity deny-list.
# CIRISEdge v0.16.1 flips the v0.15.0 in-memory
# `Arc<RwLock<HashMap<Vec<u8>, BlackholeRecord>>>` to
# `Arc<dyn BlackholeRules>` over the cohabitating engine's backend —
# the v0.15.0 acceptance criterion required durability. The trait is
# sibling to (not folded into) `FederationDirectory` because federation
# directory is about crypto identities + trust statements; blackhole is
# about transport-layer address denials (distinct concern, distinct
# lifetime). Both `SqliteBackend` + `PostgresBackend` implement it, so
# edge derives `Arc<dyn BlackholeRules>` from the same `BackendDispatch`
# arm `outbound_queue_capsule` already produces — no new capsule
# required (the capsule family stays at 6).
#
# v3.6.1 (CIRISEdge v0.19.7 — CIRISEdge#50 final closure, wheel-tier
# SIGSEGV root-cause). Tracks the persist v3.5.0 → v3.6.1 chain:
#   - v3.5.3 (CIRISPersist#133): wheel-tier completion of #132 — the
#     PyPI manylinux wheel ALSO links the system libsqlite3 dynamically
#     (matching what `cargo install` does); CI adds `libsqlite3-dev`
#     to the wheel-build apt step + a `readelf -d` verification gate
#     in `.github/workflows/ci.yml::pyo3-wheel` that asserts the
#     packaged `.so` carries `libsqlite3-*.so.0` as a NEEDED entry
#     and that `ciris_persist.libs/` contains the auditwheel sidecar.
#     This is the wheel-tier completion of the SIGSEGV root-cause edge
#     hit at v0.19.5: rusqlite's `bundled` feature compiled persist's
#     PyPI wheel with a statically-linked-in libsqlite3, and the edge
#     wheel — which links to libpython AT THE SAME PROCESS BOUNDARY
#     and re-uses persist's `PyEngine` via PyCapsule — was getting
#     a different libsqlite3 symbol set than persist's wheel-internal
#     one. The crash fired at the first cross-wheel sqlite call
#     (durable-send outbound enqueue). The fix is dynamic linkage on
#     both wheels so the loader picks ONE libsqlite3.so for the whole
#     process. v3.5.3 publishes the fixed wheel.
#   - v3.5.4 (CIRISPersist#133 follow-up): verify pin bump v4.3.0 →
#     v4.4.2. v4.3.0 never reached PyPI; v4.4.2 is the wheel-tier
#     recovery that makes the verify lockstep installable.
#   - v3.6.0 (CIRISPersist#134): multimedia tier substrate (MEDIA_SHARING
#     / CEG 0.3) — supports CIRISEdge#52 (deferred to v0.20.1). Pure
#     additive over v3.5.x; the new surfaces are not consumed at the
#     edge layer at v0.19.7.
#   - v3.6.1 (CIRISPersist#133 refinement): wheel-CI readelf gate now
#     Linux-only (darwin wheels use `otool -L`; the macOS readelf
#     conditional was a no-op gate that broke the darwin wheel job
#     on the v3.6.0 cut). Pure CI fix on persist's side.
#
# **v3.6.1 PyPI manylinux wheel VERIFIED to dynamically link libsqlite3**
# (`readelf -d` shows `libsqlite3-eac351cf.so.0` as NEEDED; auditwheel
# sidecar present at `ciris_persist.libs/libsqlite3-eac351cf.so.0`).
# This is the wheel that unblocks CIRISEdge#50 closure.
#
# Edge v0.19.7 consumes the same v3.4.x surfaces it did at v0.19.6:
#   - `FederationDirectory::peer_metadata_for(key_id) → Option<PeerMetadataRow>`
#     (v3.4.1 / CIRISPersist#127) — the cohort_scope persist-backed
#     accessor.
#   - `TrustScoring::trust_score(key_id, recursion_depth) → f64`
#     (v3.4.0 / CIRISPersist#123) — the dispatch-inbound trust
#     short-circuit (#48-B) substrate hook.
#
# Newly-available-but-not-yet-consumed surfaces (deferred to v0.20.x):
#   - v3.4.0 `trust_scoring_capsule` PyCapsule accessor cohabitation
#     wiring (v0.20.0 RC1 / CEWP infra).
#   - v3.6.0 multimedia substrate (MEDIA_SHARING.md / CEG 0.3) —
#     v0.20.1 (CIRISEdge#52).
#
# Pin floor invariants preserved from v0.19.6:
#   - verify pin parity (ciris-keyring + ciris-crypto below) — persist
#     v3.6.1 pins verify v4.4.2, so edge moves v4.2.0 → v4.4.2 in
#     lockstep to keep the single-symbol HardwareSigner / PqcSigner
#     trait-object identity invariant across the cohabitation cdylib
#     graph.
#
# Runtime requirement: the wheel + the operator host both need
# `libsqlite3.so.0` on `LD_LIBRARY_PATH`. The auditwheel sidecar
# bundles a copy into `ciris_persist.libs/` so `pip install ciris-edge`
# Just Works on any glibc≥2.34 host; `cargo`-side builds require
# `libsqlite3-dev` (apt) / `libsqlite3` (brew) — see docs/PYPI_PUBLISH.md.
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v3.6.4", version = "3", features = ["sqlite"] }
# Keyring — Ed25519 + ML-DSA-65 hardware/software signers used by
# Edge::send and Edge::send_durable to sign outbound envelopes.
# v0.13.0 — bumped to v4.0.0 in lockstep with persist v3.0.0. Both
# major bumps shipped together; pinning identically prevents two
# distinct PqcSigner traits from landing across the dep graph.
# v0.19.4 — bumped v4.0.0 → v4.2.0 in lockstep with the persist v3.4.2
# pin. v4.1.0 added `impl ciris_keyring::PqcSigner for
# ciris_crypto::MlDsa65Signer` (CIRISVerify#39) so persist
# `LocalSigner::from_parts` can accept the raw ciris-crypto signer
# directly; v4.2.0 added the CEG 0.2 cross-wheel-boundary conformance
# helpers (HumanityAccord + WitnessRelation + ciris-verify-ffi
# surface) used by persist v3.4.x.
# v0.19.7 — bumped v4.2.0 → v4.4.2 in lockstep with the persist v3.6.1
# pin. The v4.3.0 cut never reached PyPI (publish failure); v4.4.2
# is the wheel-tier recovery that restores cross-wheel installability
# for the persist v3.5.4+ chain. Edge consumes the keyring surface
# the same way it did at v4.0.0 — `Arc<dyn HardwareSigner>` for
# Ed25519 + `Arc<dyn PqcSigner>` for ML-DSA-65 — so the pin bump is
# pure currency on edge's side. The bump exists to keep ONE
# verify-crate symbol across the dep graph: persist v3.6.1 already
# moved to v4.4.2, and a mixed v4.2.0/v4.4.2 graph produces two
# distinct trait-object vtables that the trait-bound check in
# `Arc<dyn HardwareSigner>` cannot reconcile.
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v4.4.2", version = "4", features = ["software", "pqc-ml-dsa"] }
ciris-crypto  = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v4.4.2", version = "4", features = ["ed25519", "pqc-ml-dsa"] }

# Async runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
futures     = "0.3"

# Wire format / serde. RawValue is required for canonical-bytes
# preservation per FSD §3.4 — we sign canonical bytes and verify the
# exact same canonical bytes, never re-serializing a Value.
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["raw_value"] }
chrono      = { version = "0.4", features = ["serde"] }

# Hashing — body_sha256 forensic join key + in_reply_to ACK matching.
sha2        = "0.10"
base64      = "0.22"

# Errors / logs
thiserror   = "1"
tracing     = "0.1"

# IDs
uuid        = { version = "1", features = ["v4", "serde"] }

# CIRISEdge#47 (v0.17.0) — Short Authentication String (SAS) helper.
# `peer_sas` / `peer_sas_digits` produce a deterministic, order-
# independent representation of the (local_pub, peer_pub, protocol-
# constant) tuple so two operators can verbally confirm they share the
# same peer identity (MITM-resistant out-of-band verification).
# BIP39 English wordlist — 2048 words × 11 bits, 5 words ≈ 55 bits.
# License: Apache-2.0 / MIT (resolves under deny.toml § licenses.allow).
bip39       = "2"

# CIRISEdge#29 (v0.11.0) — `parking_lot::RwLock` backs
# `ReachabilityTracker`'s per-(peer, medium) map. Chosen over
# `dashmap` (extra license surface, contention-tuning we don't need)
# and `std::sync::RwLock` (slower uncontended path, less predictable
# fairness). Already a transitive dep via tokio's `parking_lot`
# feature; the explicit pin is a single MIT-licensed surface (per
# deny.toml § licenses.allow) and makes the dep audit-explicit.
parking_lot = "0.12"

# HTTP transport — feature-gated below
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1",   optional = true, features = ["client", "server", "http1"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }

# CIRISEdge#23 (Track B / v0.13.0 cut) — HTTPS transport hardening.
# Promotes the `transport-http` feature from "Reticulum-unreachable
# fallback" to production-grade, fully-equivalent transport carrying
# every wire type. The acceptance bar is "every MessageType::*
# round-trips over HTTPS" — same `dispatch_inbound` pipeline.
#
# Server-side TLS: `axum-server` (rustls integration) accepts a
# `rustls::ServerConfig`; that config carries either a no-auth
# verifier (TLS-only) or a custom `ClientCertVerifier` whose
# `verify_client_cert` consults persist's `federation_keys`
# directory via `VerifyDirectory::lookup_public_key` and rejects
# unknown CNs at handshake time. This is the surface that CIRIS
# Accord §I (Fidelity & Transparency) requires for the mTLS deployment
# path — no application-layer auth running on top of an unauthenticated
# socket.
#
# Bearer-token path: `jsonwebtoken` decodes a federation-key-signed
# JWT (Ed25519 via `Algorithm::EdDSA`). The directory's
# `pubkey_ed25519_base64` is the verification key. Use behind
# TLS-terminating CDNs where mTLS isn't feasible.
#
# Licenses (verified against deny.toml § licenses.allow):
#   rustls 0.23.x         — Apache-2.0 / ISC / MIT (triple-licensed)
#   rustls-pemfile 2.x    — Apache-2.0 / ISC / MIT
#   tokio-rustls 0.26.x   — Apache-2.0 / MIT
#   axum-server 0.7.x     — MIT
#   jsonwebtoken 9.x      — MIT
#   x509-parser 0.16.x    — MIT / Apache-2.0
# All resolve under the existing allowlist (no deny.toml change).
rustls         = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = { version = "2",    optional = true }
tokio-rustls   = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
axum-server    = { version = "0.7",  optional = true, features = ["tls-rustls-no-provider"] }
jsonwebtoken   = { version = "9",    optional = true, default-features = false }
# `x509-parser` is the minimal X.509 sniff the mTLS verifier needs to
# pull CN + Ed25519 SPKI out of the client cert. Federation identity is
# rooted in persist (not a CA), so we don't need a full PKI engine —
# just a CN string and 32-byte raw key.
x509-parser    = { version = "0.16", optional = true }
# v0.19.3 (CIRISEdge#49) — `rcgen` minimal X.509 mint for the
# `https_dev_self_signed=True` cross-wheel Python init path. The
# pyo3 `init_edge_runtime` surface mints an ephemeral self-signed
# Ed25519 cert (CN = federation key_id, SAN = the operator's bind
# host) into a tmpdir so the conformance harness can drive an HTTPS
# listener without operator-supplied PEM paths. Loud-warns on bind
# via `tracing::warn!("DEV_ONLY")` (preserved from v0.18.1). Same
# crate / version / license already vetted under the v0.18.1
# dev-dependency surface; lifted to optional-runtime here so the
# init path can reach it. Apache-2.0 / MIT.
rcgen          = { version = "0.13", optional = true, default-features = false, features = ["pem", "ring"] }
rustls-pki-types = { version = "1", optional = true }
# v0.19.3 (CIRISEdge#49) — the `init_edge_runtime`
# `https_dev_self_signed=True` path needs a tempdir that outlives the
# pyo3 init call (the HTTPS listener reads the cert files at bind
# time, which happens AFTER init returns). `tempfile` was already a
# dev-dep; lifted to optional runtime here under `transport-http`.
# License: MIT / Apache-2.0 (deny.toml allowlist clean).
tempfile       = { version = "3", optional = true }

# Reticulum transport — feature-gated below. Backed by Leviculum
# (reticulum-core + reticulum-std, workspace v0.6.3, AGPL-3.0), the
# canonical Reticulum stack for edge (OQ-07 first impl; Beechat's
# reticulum-rs was spiked and rejected — broken link data path).
#
# Pinned to the CIRISAI/leviculum fork rather than teranos/leviculum
# upstream: upstream's tree references a `vendor/Reticulum` git
# submodule at a SHA force-removed from markqvist/Reticulum, and cargo
# fetches a git dependency's submodules recursively — so the upstream
# repo cannot resolve as a cargo git dep. The fork strips the three
# dead integ-harness submodules (commit a7e1102); reticulum-core +
# reticulum-std build untouched. Fork tracks teranos/leviculum, whose
# base carries the macOS-compat commits edge's darwin CI needs.
#
# v1.1.0 (CIRISEdge#44) — bumped to d8e44bc which adds 6 public
# accessors on ReticulumNode: path_table_entries, rate_table_entries,
# get_path_clone, remove_path, drop_all_paths_via, and now_ms (the
# monotonic-clock query needed to project ms timestamps into RFC-3339
# wall-clock strings). Closes 5 of the 8 routing-table gap-stubs
# shipped in v0.15.0. The remaining 3 (tunnels, in_flight_announces,
# reverse_table) have no backing data structure in this Leviculum
# fork — tunnels/in_flight_announces don't exist as collections (only
# `tunnel_synthesize_hash` is computed for control-destination
# routing), and the reverse_table stores packet-hash → interface-index
# mappings whose shape doesn't match Edge's source_hash/destination_hash
# wire schema. Those 3 remain documented Vec::new() pending an
# upstream Leviculum design pass.
reticulum-core = { git = "https://github.com/CIRISAI/leviculum", rev = "d8e44bc77b471d3cde79f37579c66c7ee345235e", version = "0.6", optional = true }
reticulum-std  = { git = "https://github.com/CIRISAI/leviculum", rev = "d8e44bc77b471d3cde79f37579c66c7ee345235e", version = "0.6", optional = true }

# v0.11.0 (CIRISEdge#31) — Identity FFI QR codec. `qrcodegen` is the
# canonical pure-Rust QR encoder (Apache-2.0, no_std, zero unsafe in
# the data path). We use it ONLY for `export_qr_payload` byte
# generation; the import side parses the structured envelope we
# packed in via `serde_json` and does not require pixel decoding.
qrcodegen = "1.8"

# v0.11.0 (CIRISEdge#34) — Async iterator bridge. `pyo3-async-runtimes`
# is the successor to `pyo3-asyncio` (renamed in 0.21+); pinned to
# 0.28 to match the `pyo3` 0.28 pin. Provides the
# `future_into_py` + `tokio::future_into_py` shims that turn a Rust
# `Future` into a Python `asyncio.Future`. The `subscribe_*`
# pymethods return a pyclass implementing `__aiter__` / `__anext__`;
# `__anext__` constructs a Python awaitable from a
# `tokio::sync::broadcast::Receiver::recv()` future via this crate.
# Gated under `pyo3` (only the AsyncIterator surface needs it).
pyo3-async-runtimes = { version = "0.28", optional = true, features = ["tokio-runtime"] }

# v0.11.0 (CIRISEdge#35) — Stub generator dependency. Runtime-side
# helpers used by `#[gen_stub_pyclass]` / `#[gen_stub_pymethods]` /
# `#[gen_stub_pyfunction]`. The matching `pyo3-stub-gen-derive` proc-
# macros are pulled transitively. We gate this under `pyo3` so a
# non-pyo3 build doesn't pull the registry machinery.
pyo3-stub-gen = { version = "0.22", optional = true, default-features = false }

# v0.13.0 (CIRISEdge#36 / #25 / #26 / #31 reads / #28 snapshot reads) —
# UniFFI bindings generator. The spike's NO-GO carve-out keeps PyO3 for
# `init_edge_runtime` (PyCapsule cohabitation, Bound<PyAny>), Tier 2
# GIL-drainer callbacks, AsyncIterator event stream, and `set_local_display_name` +
# QR import/export (Bound<PyAny> + complex Python-side state). Everything
# else — Transport mgmt (#25), Peer mgmt (#26), Identity reads (#31), and
# Observability snapshot reads (#28) — moves under UniFFI so the same UDL
# produces Python + Kotlin Multiplatform + Swift bindings from one source.
#
# Pinned to 0.31.1 — the version the spike validated. The companion
# `uniffi_build` (build-script side) generates the Rust-side scaffolding
# from `udl/ciris_edge.udl`.
#
# Licenses (verified against deny.toml § licenses.allow):
#   uniffi 0.31.x        — Apache-2.0 / MIT
#   uniffi_core          — Apache-2.0 / MIT
#   uniffi_macros        — Apache-2.0 / MIT
#   askama (transitive)  — Apache-2.0 / MIT
#   weedle2 (transitive) — Apache-2.0 / MIT
uniffi = { version = "=0.31.1", optional = true, features = ["build", "cli", "bindgen"] }

# ─── Optional transports — gated per OQ-02, OQ-07, OQ-13 ────────────
# Implementations land in subsequent commits; features declared now so
# downstream pin contracts are stable from v0.1.0.

[features]
default = []

# Phase 1 — HTTP/HTTPS fallback for Reticulum-unreachable deployments.
# CIRISEdge#23 (Track B / v0.13.0) — promoted to production-grade
# HTTPS transport: server-side TLS via axum-server, client-side TLS
# via reqwest's rustls stack, mTLS handshake checks the client cert's
# CN against persist's federation_keys via
# `VerifyDirectory::lookup_public_key`, and a bearer-token (federation-
# key-signed JWT) path covers CDN/TLS-termination deployments.
transport-http        = [
    "dep:axum",
    "dep:tower",
    "dep:hyper",
    "dep:reqwest",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:axum-server",
    "dep:jsonwebtoken",
    "dep:x509-parser",
    # v0.19.3 (CIRISEdge#49) — `init_edge_runtime`'s
    # `https_dev_self_signed=True` path mints an ephemeral Ed25519
    # cert via rcgen. The crate's `dev_self_signed` flag itself
    # is just a forensic log marker; the cross-wheel surface needs
    # the actual cert-mint primitive on the runtime side so the
    # conformance harness can drive an HTTPS listener with no
    # operator-supplied PEM paths.
    "dep:rcgen",
    "dep:rustls-pki-types",
    "dep:tempfile",
]

# Phase 1 — Reticulum canonical wire (OQ-07 first impl). Backed by
# Leviculum's reticulum-core + reticulum-std. `TransportId::RETICULUM_RS`
# is the metrics tag; the impl lives in `src/transport/reticulum.rs`.
#
# v0.12.0 (CIRISEdge#24) — refactored from a single umbrella feature
# into per-interface sub-features. `transport-reticulum` remains the
# umbrella + back-compat alias (every existing pin "wants the Reticulum
# transport at all" still resolves); deployments that want a specific
# interface set turn on the sub-features they care about. The umbrella
# defaults to `transport-reticulum-auto` (the pre-v0.12.0 behaviour:
# AutoInterface = LAN auto-discovery via UDPv6 multicast).
#
# WIRED sub-features (have a `ReticulumInterfaceConfig` variant + Rust-
# side constructor that maps onto a `reticulum_std::driver::*` builder
# method or InterfaceConfig row):
#
#   transport-reticulum-auto         — `AutoInterface`
#   transport-reticulum-tcp-server   — `TcpServerInterface`
#   transport-reticulum-tcp-client   — `TcpClientInterface`
#   transport-reticulum-udp          — `UdpInterface`
#   transport-reticulum-local        — `LocalInterface` (AF_UNIX shared
#                                       instance; IPC cohabitation)
#   transport-reticulum-rnode        — `RNodeInterface` (LoRa via RNode;
#                                       config-driven only, leviculum
#                                       doesn't expose a Rust-side
#                                       `add_rnode` on the builder yet,
#                                       so we route via InterfaceConfig)
#   transport-reticulum-i2p          — `I2PInterface` (Phase 3 per
#                                       OQ-13; gate exists, runtime
#                                       impl deferred — building with
#                                       just this flag links the gate
#                                       but `add_reticulum_interface`
#                                       returns `TransportError::Config`
#                                       when handed an `I2p` variant)
#
# DEFERRED (gates may be added in a future cut once community demand
# materializes; per the v0.12.0 brief, kiss / ax25_kiss / serial / pipe
# / backbone are not implemented):
#
#   transport-reticulum-kiss      — KISS framing (AX.25 packet radio)
#   transport-reticulum-ax25-kiss — AX.25 over KISS
#   transport-reticulum-serial    — raw serial line
#   transport-reticulum-pipe      — Unix named pipe
#   transport-reticulum-backbone  — Reticulum "backbone" tunnel
# Umbrella feature `transport-reticulum`: links the Reticulum module,
# pulls in the leviculum deps, AND enables every wired sub-feature
# (per CIRISEdge#24's "The existing `transport-reticulum` feature
# becomes an umbrella that enables all of them" requirement).
# Deployments that need a smaller binary pick the specific
# `transport-reticulum-*` sub-feature(s) they want; existing pins
# like `transport-reticulum` keep working unchanged AND surface the
# full `ReticulumInterfaceConfig` variant set.
transport-reticulum             = [
    "transport-reticulum-auto",
    "transport-reticulum-tcp-server",
    "transport-reticulum-tcp-client",
    "transport-reticulum-udp",
    "transport-reticulum-local",
    "transport-reticulum-rnode",
    "transport-reticulum-i2p",
    "dep:reticulum-std",
    "dep:reticulum-core",
]
transport-reticulum-auto        = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-tcp-server  = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-tcp-client  = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-udp         = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-local       = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-rnode       = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-i2p         = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]

# Internal aggregator — any reticulum-* sub-feature flips this on, and
# every cfg site in the code that needs "the Reticulum transport module
# in any flavor" gates on it. NOT a public feature (underscore prefix
# is the convention); consumers wire `transport-reticulum` (the
# umbrella) or a specific sub-feature. The umbrella ALSO enables this
# via its transitive `transport-reticulum-auto` dependency.
_reticulum-module               = []

# Phase 3 — additional transports, productionized when community uptake
# justifies (OQ-13). The bare wire-level transports (LoRa not via
# Reticulum, raw serial, I²P not via Reticulum) are separate from the
# `transport-reticulum-*` Reticulum-interface family above.
# transport-lora        = []
# transport-serial      = []
# transport-i2p         = []

# pyo3 — Python bindings for the lens FastAPI cutover (Phase 1)
# and the agent Python pipeline (Phase 2). Same FFI-shell discipline
# persist uses (CIRISPersist src/ffi/pyo3.rs); abi3 single-wheel
# per-(os,arch) ships via maturin.
#
# v0.5.0 — turns on `ciris-persist/pyo3` so `init_edge_runtime`
# (the CIRIS 3.0 cohabitation constructor, CIRISEdge#16) can reach
# `ciris_persist::ffi::pyo3::PyEngine` Rust-side. persist's `pyo3`
# feature also implies `postgres`; that is intentional — the
# cohabiting agent's `PyEngine` may carry either backend variant of
# `BackendDispatch` and edge must match both at runtime.
# `pyo3` implies `transport-reticulum` — the cohabitation `init_edge_runtime`
# (and its module-private imports) is the whole point of the Python surface,
# and Reticulum is the canonical cohabitation wire (MISSION §1.4). Without
# this, the maturin wheel build (`features = ["pyo3"]` per pyproject) leaves
# the reticulum-gated items unused and `-D warnings` fails the build.
pyo3                  = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:pyo3-stub-gen",
    "ciris-persist/pyo3",
    "transport-reticulum",
    # v0.13.0 — wheel builds get the UniFFI surface by default. Per the
    # spike's GO decision (CIRISEdge#36): the Python wheel exposes BOTH
    # `from ciris_edge import PyEdge` (PyO3 entry + Tier 2 GIL-drainer
    # callbacks + AsyncIterator event stream) AND
    # `from ciris_edge.uniffi_bindings import peer_list, transport_list, ...`
    # (UniFFI-bundled #25 + #26 + #31 reads + #28 snapshot reads).
    # Mobile / native consumers can still build pure-UniFFI by enabling
    # only `ffi-uniffi`; that lane is a strict subset of the wheel-build
    # symbol set so the .so name and bindings are stable.
    "ffi-uniffi",
]

# v0.13.0 (CIRISEdge#36 GO) — UniFFI bindings surface. Generates the
# Rust-side scaffolding from `udl/ciris_edge.udl` at build time via
# `build.rs` (which invokes `uniffi::generate_scaffolding`). The
# language-side bindings (`bindings/python/ciris_edge.py` +
# `bindings/kotlin/ai/ciris/edge/ciris_edge.kt` +
# `bindings/swift/ciris_edge.swift`) are committed to the repo so
# consumers don't need `uniffi-bindgen` on their build host; a CI
# drift gate (`.github/workflows/ci.yml` job `uniffi-drift`)
# regenerates them and `git diff --exit-code`s the three files.
ffi-uniffi            = ["dep:uniffi"]

# v0.7.0 (CIRISEdge#17) — `extension-module` split out of the `pyo3`
# feature, mirroring CIRISPersist's discipline (persist v2.0.6+).
# `pyo3/extension-module` tells PyO3 not to link libpython, which is
# correct for wheel builds (the host interpreter provides the symbols
# at import time) but breaks `cargo test --features pyo3` because tests
# need to link libpython for in-process Python-from-Rust embedding.
# Wheel builds invoke `--features "pyo3 extension-module"`; test +
# lint builds invoke `--features pyo3` and link libpython normally.
# pyproject.toml's `[tool.maturin]` features list adds the extra flag.
extension-module      = ["pyo3?/extension-module"]

# v0.13.0 (CIRISEdge#36 GO) — UniFFI build-script side. The companion
# `uniffi` runtime dep provides the runtime scaffolding; this build-deps
# pin gives `build.rs` access to `uniffi::generate_scaffolding` against
# `udl/ciris_edge.udl`. Pinned to 0.31.1 — UniFFI requires matched
# versions across the build/runtime boundary; mismatch produces a
# "uniffi version skew" link error.
#
# Note: `[build-dependencies]` ignores Cargo features, so this is
# always pulled. The build script itself short-circuits via
# `cargo:rerun-if-env-changed=CARGO_FEATURE_FFI_UNIFFI` and a runtime
# feature check; non-uniffi builds compile a no-op `build.rs` body so
# the only overhead is the build-time crate compile (one-time).
[build-dependencies]
uniffi = { version = "=0.31.1", features = ["build"] }

[dependencies.pyo3]
version  = "0.28"
# v0.7.0 (CIRISEdge#17) — `abi3-py310`, not `abi3-py311`. Chaquopy
# bundles Python 3.10 (Android mobile cohabitation, CIRISPersist#96–99
# precedent); abi3 is forward-compatible so a py310-tagged wheel runs
# on 3.11 / 3.12 / 3.13 too — bumping the floor down is purely an
# expansion of compatibility, not a regression for the existing PyPI
# consumers. `extension-module` removed from this list — it's now its
# own top-level feature (see above).
features = ["abi3-py310"]
optional = true

[lib]
# v0.1.0-pre1 — explicit crate-type so maturin can build the PyO3
# extension AND `cargo test` / downstream `cargo` consumers still
# get the `rlib`. Mirrors CIRISPersist Cargo.toml.
crate-type = ["cdylib", "rlib"]

# Build-manifest extras emitter — mirrors CIRISPersist's
# `emit_persist_extras` and CIRISLens's `emit_lens_extras.py`.
# Invoked by `.github/workflows/ci.yml::build-manifest` to produce
# the EdgeExtras JSON that ciris-build-sign embeds in the signed
# BuildManifest (OQ-12 closure).
[[bin]]
name = "emit_edge_extras"
path = "src/bin/emit_edge_extras.rs"

# v0.11.0 (CIRISEdge#35) — pyo3-stub-gen driver. Walks the inventory of
# `#[gen_stub_pyclass]` / `#[gen_stub_pymethods]` / `#[gen_stub_pyfunction]`
# items registered at link time and writes `python/ciris_edge/__init__.pyi`.
# Required-features = ["pyo3"] so the stub-gen helpers are linked in.
# CI gate: `cargo run --features pyo3 --bin stub_gen && git diff --exit-code python/ciris_edge/__init__.pyi`.
[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["pyo3"]

# v0.13.0 (CIRISEdge#36 GO) — local UniFFI bindgen driver. UniFFI 0.31
# no longer publishes a standalone `uniffi-bindgen` CLI on crates.io;
# the recommended pattern is each project compiles its own tiny driver
# that calls `uniffi::uniffi_bindgen_main()`. Invoked by the CI drift
# gate (`.github/workflows/ci.yml::uniffi-drift`) to regenerate
# `bindings/{python,kotlin,swift}/` and assert the result matches the
# committed files (`git diff --exit-code`).
[[bin]]
name = "uniffi_bindgen_cli"
path = "src/bin/uniffi_bindgen_cli.rs"
required-features = ["ffi-uniffi"]

# ─── Criterion benches (docs/BENCHMARKS.md) ─────────────────────────
#
# `harness = false` per criterion convention: disables Rust's default
# `#[test]` harness so criterion's own `criterion_main!()` runs.
# Bench files live in `benches/`; shared fixtures in `benches/common/`.
#
# Default-feature benches (no transport / no pyo3) — run on every
# `cargo bench --workspace`:
#
#   envelope_canonicalize, envelope_verify, dispatch_inbound,
#   outbound_enqueue, accord_threshold_verify, steward_fanout,
#   content_fetch_roundtrip, inline_text_pipeline
#
# Feature-gated benches — must be invoked with the matching `--features`:
#
#   transport_reticulum_loopback (transport-reticulum)
#   transport_http_loopback      (transport-http)
#   subscription_throughput      (pyo3)
#
# Per the BENCHMARKS.md "Running" section, the CI workflow
# (.github/workflows/bench.yml) drives all three feature sets in
# sequence.

[[bench]]
name = "envelope_canonicalize"
harness = false

[[bench]]
name = "envelope_verify"
harness = false

[[bench]]
name = "dispatch_inbound"
harness = false

[[bench]]
name = "outbound_enqueue"
harness = false

[[bench]]
name = "accord_threshold_verify"
harness = false

[[bench]]
name = "steward_fanout"
harness = false

[[bench]]
name = "content_fetch_roundtrip"
harness = false

[[bench]]
name = "inline_text_pipeline"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false
required-features = ["pyo3"]

[[bench]]
name = "transport_reticulum_loopback"
harness = false
required-features = ["transport-reticulum"]

[[bench]]
name = "transport_http_loopback"
harness = false
required-features = ["transport-http"]

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
proptest = "1"
# Reticulum loopback + authenticated-resolution acceptance tests
# (tests/reticulum_loopback.rs, tests/reticulum_av42.rs). `hex`
# encodes the scrub-signed federation_keys rows the AV-42 cold-start
# fixtures seed the persist directory with.
tempfile           = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex                = "0.4"
sha2               = "0.10"
# v0.10.x — criterion bench harness (docs/BENCHMARKS.md). The
# `html_reports` feature produces the per-bench HTML report uploaded
# by .github/workflows/bench.yml as the `criterion-report` artifact;
# the text summary lands as `bench-results-txt`. Same cadence as
# CIRISVerify's bench.yml (push-to-main + workflow_dispatch).
criterion          = { version = "0.5", features = ["html_reports", "async_tokio"] }
async-trait        = "0.1"
# v0.6.0 — `tests/federation_announcement.rs` (CIRISEdge#18) drives
# persist's `put_delivery_attestation` / `list_delivery_attestations`
# admission surface — those methods live behind persist's `cirisnode`
# feature flag. Cargo merges dependency-feature sets, so adding the
# flag here lights up the symbols for the test-build only without
# changing edge's normal-build dependency surface.
#
# v0.10.x — `classify` + `scrub` features added so the
# `inline_text_pipeline` bench (docs/BENCHMARKS.md) can construct
# `default_outbound_pipeline::<InlineTextEnvelope>()` (Classify +
# Scrub) over the persist pipeline surface. Dev-deps only; the normal
# edge build does not pull these.
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v3.6.4", version = "3", features = ["sqlite", "cirisnode", "classify", "scrub"] }
# CIRISEdge#23 / #49 — `tests/transport_http_hardening.rs` +
# `tests/https_per_messagetype_roundtrip.rs` + `tests/https_pyedge_init.rs`
# (v0.19.3) mint self-signed Ed25519 certs on the fly. v0.19.3
# (CIRISEdge#49) lifted `rcgen` + `rustls-pki-types` into optional
# runtime dependencies gated under `transport-http` so the
# `init_edge_runtime` cross-wheel Python surface can mint a dev cert
# for the `https_dev_self_signed=True` path. License: MIT / Apache-2.0
# (deny.toml allowlist clean). No additional pin needed here — the
# `[dependencies]` entry already names the version under the
# `transport-http` feature flag.

[lints.rust]
# v0.9.2 (CIRISEdge#22 cohabitation) — relaxed from `forbid` to `deny`.
# `PyCapsule` extraction is the load-bearing primitive for cross-wheel
# cohabitation handoff (CIRISPersist#109) and is inherently unsafe at
# the FFI surface (no compile-time type check; the consumer trusts the
# producer's capsule name tag + wrapped type). The carve-out is
# scoped to the single `extract_capsule` helper in `src/ffi/pyo3.rs`;
# everywhere else in the crate, `unsafe` is still rejected.
#
# v0.13.0 (CIRISEdge#36 GO) — further relaxed to `allow` so the
# `uniffi::include_scaffolding!("ciris_edge")` macro can land its
# ~30 `#[unsafe(no_mangle)]` FFI shim items at the crate root without
# triggering the lint. Cargo's table-level lints can't be cfg-gated
# per-feature, so the relaxation applies uniformly; every hand-written
# `unsafe` site still carries its own audit comment + per-item `#[allow]`,
# so this only loosens the scaffolding-generated items.
unsafe_code = "allow"

[lints.clippy]
all     = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic relaxations:
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
# Skeleton-phase concessions — drop these when bodies fill in:
#  - unused_async: skeleton fns are async because their final form will be;
#    clippy can't see through todo!() to the eventual .await calls.
#  - doc_markdown: pedantic complaint about identifiers in docs not having
#    backticks. Not load-bearing for correctness; defer the cleanup pass
#    until the doc surface stabilizes.
unused_async = "allow"
doc_markdown = "allow"
