[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "ciris-edge"
description = "Reticulum-native federation transport for the CIRIS stack"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "CIRIS AI", email = "hello@ciris.ai" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
# v0.2.0 — pip-install-time subsumption mirroring persist's pattern.
# `pip install ciris-edge` pulls `ciris-persist` (which transitively
# pulls `ciris-verify` and the `ciris-build-sign` /
# `ciris-build-verify` console_scripts onto PATH). Lens / agent /
# registry get one install command for the whole edge+persist+verify
# stack.
#
# Pin to >=1.1.2 because that's the polymorphic-Pipeline cut
# (CIRISPersist#33 Path A bounded): `Pipeline<E: WireEnvelope>` +
# `InlineTextEnvelope` + `default_speak_pipeline` factory — edge's
# `send_inline` / `send_durable_inline` invoke this for outbound
# SPEAK / LLM-prompt / WBD-body transit-touch. Also folds in the
# substrate constructors (CIRISPersist#43) edge's
# `EdgeBuilder::from_keyring_seed_dir` calls for sovereign-mode
# Reticulum adoption.
#
# Pin to <2 because we expect persist to follow semver-major on
# breaking changes; v0.2.x edge consumes v1.x persist. Bump the
# upper bound when v0.3.x edge coordinates with v2.x persist.
# v0.2.8 — pin floor bumped to >=1.11.0, currency catch-up on the
# CIRIS 3.0 cohabitation convergence point. All co-resident consumers
# (agent + NodeCore + LensCore + edge) must link one identical
# ciris-persist version to share the OnceLock-backed Engine
# process-singleton (CIRISPersist#85 EPIC). v1.11.0 pins CIRISVerify
# v2.8.0; edge's keyring/crypto pins move v2.7.0 → v2.8.0 in lockstep.
# Persist prelude surface unchanged — pure currency bump, zero API
# drift on edge's consumed paths.
dependencies = [
    "ciris-persist>=2.8.0,<3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ciris.ai"
Repository = "https://github.com/CIRISAI/CIRISEdge"
Issues = "https://github.com/CIRISAI/CIRISEdge/issues"

[tool.maturin]
# v0.7.0 (CIRISEdge#17) — `extension-module` is a separate Cargo
# feature now (CIRISPersist discipline; see Cargo.toml `[features]`
# block). Wheel builds need both: `pyo3` lights up the FFI bindings
# (pulls `dep:pyo3`, `ciris-persist/pyo3`, and `transport-reticulum`),
# while `extension-module` flips `pyo3/extension-module` so the linker
# doesn't search for a libpython — the host interpreter provides the
# symbols when the wheel is imported. `cargo test --features pyo3`
# (no `extension-module`) still works because tests need the libpython
# link.
features = ["pyo3", "extension-module"]
module-name = "ciris_edge"
# abi3-py310 — one wheel covers Python 3.10+. v0.7.0 (CIRISEdge#17)
# dropped the py310/py311 minor-version pin so Chaquopy (bundles
# Python 3.10) can consume the same wheel shape as the PyPI desktop
# build path. abi3 is forward-compatible: py310-tagged wheels run on
# 3.11 / 3.12 / 3.13 too. CIRISEdge ships three platform wheels:
# linux-x86_64, linux-aarch64, darwin-aarch64 (darwin-x86_64 omitted
# per GitHub Actions Intel macOS runner capacity issues — matches
# persist's matrix exactly).
python-source = "python"
strip = true
